# Agrobot

./: .gitignore  .gitmodules  cyclone_config.xml
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: apply_ipm_pdo_remap.sh  apply_ipm_pdo_remap_all.sh  apply_ipm_pdo_remap_one.sh  can_bootstrap.env  coarsen_moveit_timed_mode.py  ensure_can_interface.sh  fix_timed_move_bug.py  fix_timed_move_range_bug.py  j3_preflight.sh  make_epos2_multi_joint_layout.sh  merge_joint_states.py  patch_bridge_for_node_ids.py  patch_timed_moveit_mode.py  start_epos2_arm.sh  start_epos2_arm.sh.bak_j3only  start_epos2_system.sh  start_full_motion_stack.sh  test_epos2_bridge_services.sh  verify_epos2_j3_ipm.sh
src/epos2_bridge/epos2_bridge/: epos2_arm_controller.py.bak_native_pvt  epos2_arm_controller.py.bak_native_pvt_robust  epos2_j3_bridge.py  epos2_j3_bridge.py.bak_adaptive_dialback  epos2_j3_bridge.py.bak_native_pvt
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  robot.ros2_control.xacro  robot.srdf  ros2_controllers.yaml
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: ros2_controllers.yaml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: arm.urdf.xacro  arm.xacro  my_robot.ros2_control.xacro
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: robot_moveit.rviz  ros2_controllers.yaml
src/robot_bringup/launch/: robot.launch.xml
src/robot_commander/: CMakeLists.txt  commander.cpp  package.xml
src/robot_commander/launch/: commander.launch.py
src/robot_commander/src/: commander.cpp
src/robot_commander/src/tests/: cartesian_path.cpp  joint_goal.cpp  named_goal.cpp  position_goal.cpp
src/robot_description/: package.xml
src/robot_description/launch/: display.launch.xml
src/robot_description/rviz/: urdf_config.rviz
src/robot_description/urdf/: gripper.xacro  robot.ros2_control.xacro  robot.urdf.xacro  robot.xacro
src/robot_interfaces/: CMakeLists.txt  package.xml
(+694 files in other folders)
